# poc-dbt-snowflake-migration

./: .gitignore  .mcp.json  README.md  aqua.yaml  example-profiles.yml  example.env  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.dbt/: profiles.yml
.github/: CODEOWNERS
dbt-snowflake-modeling/var_poc/: .gitignore  dbt_project.yml  package-lock.yml  packages.yml
dbt-snowflake-modeling/var_poc/models/prd_103_sc/: sources.yml
dbt-snowflake-modeling/var_poc/models/prd_103_sc/marts/: contact.sql  cst_contactnote__c.sql  cst_visit__c.sql  cst_warningnote__c.sql  schema.yml
