[project]
name = "default"
version = "0.1.0"
description = ""

authors = [{ name = "god", email = "god@gmail.com" }]
maintainers = [{ name = "god", email = "god@gmail.com" }]

requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "dbt-core>=1.9.2",
    "dbt-snowflake>=1.9.1",
    "dbt-osmosis>=1.1.13",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.2",
    "duckdb>=1.2.1",
    "dbt-duckdb>=1.9.2",
    "shandy-sqlfmt[jinjafmt]>=0.26.0",
    "dbterd>=1.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.sqlfmt]
exclude=["target/**/*", "dbt_packages/**/*"]
line_length = 88
check = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
